--- a/src/components/Header/index.scss
+++ b/src/components/Header/index.scss
@@ -4,23 +4,25 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  margin: 0;
-  padding: 0 100px;
+  padding: 0 20px;
+  margin: 15px 0;
   background-color: $primary-color;
   color: $light-color;
+  border-radius: 10px;
   a {
     color: $light-color;
     font-size: small;
+    font-weight: 600;
     padding: 8px;
     margin: 0 5px;
     border-radius: 7px;
     cursor: pointer;
     &:first-child {
-      background-color: $secondary-color;
-      color: $dark-color;
+      background-color: $light-color;
+      color: $primary-color;
     }
     &:hover {
-      color: $dark-color;
+      color: $secondary-color;
     }
   }
   
@@ -30,7 +32,7 @@
 }
 
 .logo-image {
-  width: 60px;
+  width: 40px;
   height: 40px;
   padding: 8px 8px 8px 0;
   margin-right: 5px;
@@ -42,10 +44,16 @@
   flex-direction: row;
 }
 
-@media screen and (max-width: 768px) {
+a {
+  color: $light-color;
+  text-decoration: none;
+}
+
+@media (max-width: 768px) {
   .header {
     flex-direction: column;
-    padding: 6px 0 0 0;
+    padding: 0;
+    border-radius: 0;
     a {
       float: none;
       display: block;
